# srv-rs

./: .dockerignore  .env.template  .gitignore  Cargo.toml  Dockerfile  mprocs.yaml
src/: config.rs  emitter.rs  error.rs  lib.rs  main.rs  parser.rs  publisher.rs  sensors.rs
